Updated the relaxation dispersion model list on the dispersion analysis webpage.
This is at http://www.nmr-relax.com/analyses/relaxation_dispersion.html.

--- a/analyses/relaxation_dispersion.html
+++ b/analyses/relaxation_dispersion.html
@@ -84,6 +84,22 @@
       <li><b>'NS CPMG 2-site star full'</b>:  The full model for 2-site exchange using complex conjugate matrices with the parameters <em>{R<sub>2A</sub><sup>0</sup>, R<sub>2B</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
     </ul>
 
+   <h3>Analytic models for MMQ-type data</h3>
+    <p>The following analytic models are designed for combined proton-heteronuclear SQ, ZQ, DQ and MQ (MMQ, or multi-multiple quantum) CPMG-type experiments:</p>
+
+    <ul>
+      <li><b>'<a href="http://wiki.nmr-relax.com/MMQ_CR72">MMQ CR72</a>'</b>:  The Carver and Richards (1972) 2-site model for most time scales expanded for MQ CPMG data by Korzhnev et al., 2004.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, &#916;&#969;<sup>H</sup>, k<sub>ex</sub>}</em>.</li>
+    </ul>
+
+   <h3>Numeric models for MMQ-type data</h3>
+    <p>The following numeric models are designed for MMQ CPMG-type experiments:</p>
+
+    <ul>
+      <li><b>'<a href="http://wiki.nmr-relax.com/NS_MMQ_2-site">NS MMQ 2-site</a>'</b>:  The model for 2-site exchange whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup></em> is assumed.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, &#916;&#969;<sup>H</sup>, k<sub>ex</sub>}</em>.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/NS_MMQ_3-site_linear">NS MMQ 3-site linear</a>'</b>:  The model for 3-site exchange linearised with <em>k<sub>AC</sub> = k<sub>CA</sub> = 0</em> whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup> = R<sub>2C</sub><sup>0</sup></em> is assumed.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;<sub>AB</sub>, &#916;&#969;<sub>BC</sub>, &#916;&#969;<sub>AB</sub><sup>H</sup>, &#916;&#969;<sub>BC</sub><sup>H</sup>, k<sub>ex</sub><sup>AB</sup>, k<sub>ex</sub><sup>BC</sup>, k<sub>ex</sub><sup>AC</sup>}</em>.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/NS_MMQ_3-site">NS MMQ 3-site</a>'</b>:  The model for 3-site exchange whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup> = R<sub>2C</sub><sup>0</sup></em> is assumed.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;<sub>AB</sub>, &#916;&#969;<sub>BC</sub>, &#916;&#969;<sub>AB</sub><sup>H</sup>, &#916;&#969;<sub>BC</sub><sup>H</sup>, k<sub>ex</sub><sup>AB</sup>, k<sub>ex</sub><sup>BC</sup>, k<sub>ex</sub><sup>AC</sup>}</em>.</li>
+    </ul>
+
    <h3>Analytic models for R1rho experiments</h3>
     <p>The following analytic models are designed for R<sub>1&#961;</sub>-type experiments:</p>
 
@@ -101,20 +117,8 @@
 
     <ul>
       <li><b>'<a href="http://wiki.nmr-relax.com/NS_R1rho_2-site">NS R1rho 2-site</a>'</b>:  The model for 2-site exchange using 3D magnetisation vectors.  It has the parameters <em>{R<sub>1&#961;</sub>', ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
-    </ul>
-
-   <h3>Analytic models for MMQ-type data</h3>
-    <p>The following analytic models are designed for combined proton-heteronuclear SQ, ZQ, DQ and MQ (MMQ, or multi-multiple quantum) CPMG-type experiments:</p>
-
-    <ul>
-      <li><b>'<a href="http://wiki.nmr-relax.com/MQ_CR72">MQ CR72</a>'</b>:  The Carver and Richards (1972) 2-site model for most time scales expanded for MQ CPMG data by Korzhnev et al., 2004.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, &#916;&#969;<sup>H</sup>, k<sub>ex</sub>}</em>.</li>
-    </ul>
-
-   <h3>Numeric models for MMQ-type data</h3>
-    <p>The following numeric models are designed for MMQ CPMG-type experiments:</p>
-
-    <ul>
-      <li><b>'<a href="http://wiki.nmr-relax.com/MMQ_2-site">MMQ 2-site</a>'</b>:  The model for 2-site exchange whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup></em> is assumed.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, &#916;&#969;<sup>H</sup>, k<sub>ex</sub>}</em>.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/NS_R1rho_3-site_linear">NS R1rho 3-site linear</a>'</b>:  The model for 3-site exchange linearised with <em>k<sub>AC</sub> = k<sub>CA</sub> = 0</em> whereby the simplification <em>R<sub>1&#961;A</sub>' = R<sub>1&#961;B</sub>' = R<sub>1&#961;C</sub>'</em> is assumed.  It has the parameters <em>{R<sub>1&#961;</sub>', ..., p<sub>A</sub>, p<sub>B</sub>, &#916;&#969;<sub>AB</sub>, &#916;&#969;<sub>BC</sub>, k<sub>ex</sub><sup>AB</sup>, k<sub>ex</sub><sup>BC</sup>}</em>.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/NS_R1rho_3-site">NS R1rho 3-site</a>'</b>:  The model for 3-site exchange whereby the simplification <em>R<sub>1&#961;A</sub>' = R<sub>1&#961;B</sub>' = R<sub>1&#961;C</sub>'</em> is assumed.  It has the parameters <em>{R<sub>1&#961;</sub>', ..., p<sub>A</sub>, p<sub>B</sub>, &#916;&#969;<sub>AB</sub>, &#916;&#969;<sub>BC</sub>, k<sub>ex</sub><sup>AB</sup>, k<sub>ex</sub><sup>BC</sup>, k<sub>ex</sub><sup>AC</sup>}</em>.</li>
     </ul>
 
   </div>
