Improvements for the http://www.nmr-relax.com/analyses/relaxation_dispersion.html web page.
More links to the wiki have been added, and the MMQ descriptions improved.

--- a/analyses/relaxation_dispersion.html
+++ b/analyses/relaxation_dispersion.html
@@ -44,7 +44,7 @@
      <li>Zero quantum (ZQ) CPMG-type data.</li>
      <li>Double quantum (DQ) CPMG-type data.</li>
      <li>Multiple quantum (MQ) CPMG-type data.</li>
-     <li>Combined proton-heteronuclear SQ, ZQ, DQ and MQ CPMG-type data.  This is labelled as multiple-MQ or MMQ data.</li>
+     <li>Combined proton-heteronuclear SQ, ZQ, DQ and MQ CPMG-type data.  This is labelled as multiple MQ or MMQ data.</li>
      <li>R<sub>1&#961;</sub>-type data.</li>
     </ul>
   </div>
@@ -57,7 +57,7 @@
     <p>The following models are independent of the experiment type:</p>
 
     <ul>
-      <li><b>'R2eff'</b>:  This is the model used to determine the R<sub>2eff</sub> or R<sub>1&#961;</sub> values and errors required as the base data for all other models.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/R2eff">R2eff</a>'</b>:  This is the model used to determine the R<sub>2eff</sub> or R<sub>1&#961;</sub> values and errors required as the base data for all other models.</li>
       <li><b>'<a href="http://wiki.nmr-relax.com/No_Rex">No Rex</a>'</b>:  This is the model for no chemical exchange being present.</li>
     </ul>
 
@@ -66,7 +66,7 @@
 
     <ul>
       <li><b>'<a href="http://wiki.nmr-relax.com/LM63">LM63</a>'</b>:  The original Luz and Meiboom 1963 2-site fast exchange equation with parameters <em>{R<sub>2</sub><sup>0</sup>, ..., &#934;<sub>ex</sub>, k<sub>ex</sub>}</em>.</li>
-      <li><b>'LM63 3-site'</b>:  The original Luz and Meiboom 1963 3-site fast exchange equation with parameters <em>{R<sub>2</sub><sup>0</sup>, ..., &#934;<sub>exB</sub>, k<sub>B</sub>, &#934;<sub>exC</sub>, k<sub>C</sub>}</em>.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/LM63_3-site">LM63 3-site</a>'</b>:  The original Luz and Meiboom 1963 3-site fast exchange equation with parameters <em>{R<sub>2</sub><sup>0</sup>, ..., &#934;<sub>exB</sub>, k<sub>B</sub>, &#934;<sub>exC</sub>, k<sub>C</sub>}</em>.</li>
       <li><b>'<a href="http://wiki.nmr-relax.com/CR72">CR72</a>'</b>:  The reduced Carver and Richards 1972 2-site equation for most time scales whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup></em> is assumed.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
       <li><b>'<a href="http://wiki.nmr-relax.com/CR72_full">CR72 full</a>'</b>:  The full Carver and Richards 1972 2-site equation for most time scales with the parameters <em>{R<sub>2A</sub><sup>0</sup>, R<sub>2B</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
       <li><b>'<a href="http://wiki.nmr-relax.com/IT99">IT99</a>'</b>:  The Ishima and Torchia 1999 2-site model for all time scales with <em>p<sub>A</sub> &#187; p<sub>B</sub></em> and with parameters <em>{R<sub>2</sub><sup>0</sup>, ..., &#934;<sub>ex</sub>, p<sub>A</sub>.&#916;&#969;<sup>2</sup>, k<sub>ex</sub>}</em>.</li>
@@ -77,18 +77,18 @@
     <p>The following analytic models are designed for the standard single quantum CPMG-type experiments:</p>
 
     <ul>
-      <li><b>'NS CPMG 2-site expanded'</b>:  A model for 2-site exchange expanded using Maple by Nikolai Skrynnikov (Tollinger et al., 2001).  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
-      <li><b>'NS CPMG 2-site 3D'</b>:  The reduced model for 2-site exchange using 3D magnetisation vectors whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup></em> is assumed.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
-      <li><b>'NS CPMG 2-site 3D full'</b>:  The reduced model for 2-site exchange using 3D magnetisation vectors with the parameters <em>{R<sub>2A</sub><sup>0</sup>, R<sub>2B</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
-      <li><b>'NS CPMG 2-site star'</b>:  The reduced model for 2-site exchange using complex conjugate matrices whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup></em> is assumed.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
-      <li><b>'NS CPMG 2-site star full'</b>:  The full model for 2-site exchange using complex conjugate matrices with the parameters <em>{R<sub>2A</sub><sup>0</sup>, R<sub>2B</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_expanded">NS CPMG 2-site expanded</a>'</b>:  A model for 2-site exchange expanded using Maple by Nikolai Skrynnikov (Tollinger et al., 2001).  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_3D">NS CPMG 2-site 3D</a>'</b>:  The reduced model for 2-site exchange using 3D magnetisation vectors whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup></em> is assumed.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_3D_full">NS CPMG 2-site 3D full</a>'</b>:  The reduced model for 2-site exchange using 3D magnetisation vectors with the parameters <em>{R<sub>2A</sub><sup>0</sup>, R<sub>2B</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_star">NS CPMG 2-site star</a>'</b>:  The reduced model for 2-site exchange using complex conjugate matrices whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup></em> is assumed.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_star_full">NS CPMG 2-site star full</a>'</b>:  The full model for 2-site exchange using complex conjugate matrices with the parameters <em>{R<sub>2A</sub><sup>0</sup>, R<sub>2B</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.</li>
     </ul>
 
    <h3>Analytic models for MMQ-type data</h3>
-    <p>The following analytic models are designed for combined proton-heteronuclear SQ, ZQ, DQ and MQ (MMQ, or multi-multiple quantum) CPMG-type experiments:</p>
+    <p>The following analytic models are designed for combined proton-heteronuclear SQ, ZQ, DQ and MQ (MMQ, or multiple MQ) CPMG-type experiments:</p>
 
     <ul>
-      <li><b>'<a href="http://wiki.nmr-relax.com/MMQ_CR72">MMQ CR72</a>'</b>:  The Carver and Richards (1972) 2-site model for most time scales expanded for MQ CPMG data by Korzhnev et al., 2004.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, &#916;&#969;<sup>H</sup>, k<sub>ex</sub>}</em>.</li>
+      <li><b>'<a href="http://wiki.nmr-relax.com/MMQ_CR72">MMQ CR72</a>'</b>:  The Carver and Richards (1972) 2-site model for most time scales expanded for MMQ CPMG data by Korzhnev et al., 2004.  It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, &#916;&#969;<sup>H</sup>, k<sub>ex</sub>}</em>.</li>
     </ul>
 
    <h3>Numeric models for MMQ-type data</h3>
