--- a/analyses/relaxation_dispersion.html
+++ b/analyses/relaxation_dispersion.html
@@ -60,10 +60,19 @@
       <li id="R2eff">
         <b>'<a href="http://wiki.nmr-relax.com/R2eff">R2eff</a>'</b>:
         This is the model used to determine the R<sub>2eff</sub> or R<sub>1&#961;</sub> values and errors required as the base data for all other models.
+        (See the
+        <a href="http://wiki.nmr-relax.com/R2eff">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/R2eff_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/specific_analyses.relax_disp.optimisation-module.html#back_calc_r2eff">API documentation (for exponential curves)</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.two_point-module.html#calc_two_point_r2eff">API documentation (for the 2-point fit)</a>).
       </li>
-      <li id="No Rex">
+      <li id="No_Rex">
         <b>'<a href="http://wiki.nmr-relax.com/No_Rex">No Rex</a>'</b>:
         This is the model for no chemical exchange being present.
+        (See the
+        <a href="http://wiki.nmr-relax.com/No_Rex">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/model_no_chemical_exchange_relaxation.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/target_functions.relax_disp.Dispersion-class.html#func_NOREX">API documentation</a>).
       </li>
     </ul>
 
@@ -74,29 +83,53 @@
       <li id="LM63">
         <b>'<a href="http://wiki.nmr-relax.com/LM63">LM63</a>'</b>:
         The original Luz and Meiboom 1963 2-site fast exchange equation with parameters <em>{R<sub>2</sub><sup>0</sup>, ..., &#934;<sub>ex</sub>, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/LM63">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/LM63_2_site_fast_exchange_CPMG_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.lm63-module.html">API documentation</a>).
       </li>
-      <li id="LM63 3-site">
+      <li id="LM63_3-site">
         <b>'<a href="http://wiki.nmr-relax.com/LM63_3-site">LM63 3-site</a>'</b>:
         The original Luz and Meiboom 1963 3-site fast exchange equation with parameters <em>{R<sub>2</sub><sup>0</sup>, ..., &#934;<sub>exB</sub>, k<sub>B</sub>, &#934;<sub>exC</sub>, k<sub>C</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/LM63_3-site">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/LM63_3_site_fast_exchange_CPMG_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.lm63_3site-module.html">API documentation</a>).
       </li>
       <li id="CR72">
         <b>'<a href="http://wiki.nmr-relax.com/CR72">CR72</a>'</b>:
         The reduced Carver and Richards 1972 2-site equation for most time scales whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup></em> is assumed.
   It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/CR72">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/reduced_CR72_2_site_CPMG_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.cr72-module.html">API documentation</a>).
       </li>
-      <li id="CR72 full">
+      <li id="CR72_full">
         <b>'<a href="http://wiki.nmr-relax.com/CR72_full">CR72 full</a>'</b>:
         The full Carver and Richards 1972 2-site equation for most time scales with the parameters <em>{R<sub>2A</sub><sup>0</sup>, R<sub>2B</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/CR72_full">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/full_CR72_2_site_CPMG_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.cr72-module.html">API documentation</a>).
       </li>
       <li id="IT99">
         <b>'<a href="http://wiki.nmr-relax.com/IT99">IT99</a>'</b>:
         The Ishima and Torchia 1999 2-site model for all time scales with <em>p<sub>A</sub> &#187; p<sub>B</sub></em> and with parameters <em>{R<sub>2</sub><sup>0</sup>, ..., &#934;<sub>ex</sub>, p<sub>A</sub>.&#916;&#969;<sup>2</sup>, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/IT99">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/IT99_2_site_CPMG_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.it99-module.html">API documentation</a>).
       </li>
       <li id="TSMFK01">
         <b>'<a href="http://wiki.nmr-relax.com/TSMFK01">TSMFK01</a>'</b>:
         The Tollinger et al., 2001 2-site very-slow exchange model for time scales within range of microsecond to second time scale.
         Applicable in the limit of slow exchange, when <em>R<sub>2A</sub><sup>0</sup> - R<sub>2B</sub><sup>0</sup> &#171; k<sub>AB</sub>, k<sub>BA</sub> &#171; 1/&#964;<sub>CPMG</sub></em>.
         <em>2*&#964;<sub>CPMG</sub></em> is the time between successive 180 degree pulses. The parameters are <em>{R<sub>2A</sub><sup>0</sup>, ..., &#916;&#969;, k<sub>AB</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/TSMFK01">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/TSMFK01_2_site_CPMG_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.tsmfk01-module.html">API documentation</a>).
       </li>
     </ul>
 
@@ -104,28 +137,48 @@
     <p>The following analytic models are designed for the standard single quantum CPMG-type experiments:</p>
 
     <ul>
-      <li id="NS CPMG 2-site expanded">
+      <li id="NS_CPMG_2-site_expanded">
         <b>'<a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_expanded">NS CPMG 2-site expanded</a>'</b>:
         A model for 2-site exchange expanded using Maple by Nikolai Skrynnikov (Tollinger et al., 2001).
         It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_expanded">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/NS_2_site_expanded_CPMG_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.ns_cpmg_2site_expanded-module.html">API documentation</a>).
       </li>
-      <li id="NS CPMG 2-site 3D">
+      <li id="NS_CPMG_2-site_3D">
         <b>'<a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_3D">NS CPMG 2-site 3D</a>'</b>:
         The reduced model for 2-site exchange using 3D magnetisation vectors whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup></em> is assumed.
         It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_3D">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/reduced_NS_2_site_3D_CPMG_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.ns_cpmg_2site_3d-module.html">API documentation</a>).
       </li>
-      <li id="NS CPMG 2-site 3D full">
+      <li id="NS_CPMG_2-site_3D_full">
         <b>'<a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_3D_full">NS CPMG 2-site 3D full</a>'</b>:
         The reduced model for 2-site exchange using 3D magnetisation vectors with the parameters <em>{R<sub>2A</sub><sup>0</sup>, R<sub>2B</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_3D_full">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/full_NS_2_site_3D_CPMG_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.ns_cpmg_2site_3d-module.html">API documentation</a>).
       </li>
-      <li id="NS CPMG 2-site star">
+      <li id="NS_CPMG_2-site_star">
         <b>'<a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_star">NS CPMG 2-site star</a>'</b>:
         The reduced model for 2-site exchange using complex conjugate matrices whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup></em> is assumed.
         It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_star">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/reduced_NS_2_site_star_CPMG_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.ns_cpmg_2site_star-module.html">API documentation</a>).
       </li>
-      <li id="NS CPMG 2-site star full">
+      <li id="NS_CPMG_2-site_star_full">
         <b>'<a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_star_full">NS CPMG 2-site star full</a>'</b>:
         The full model for 2-site exchange using complex conjugate matrices with the parameters <em>{R<sub>2A</sub><sup>0</sup>, R<sub>2B</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/NS_CPMG_2-site_star_full">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/full_NS_2_site_star_CPMG_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.ns_cpmg_2site_star-module.html">API documentation</a>).
       </li>
     </ul>
 
@@ -133,10 +186,14 @@
     <p>The following analytic models are designed for combined proton-heteronuclear SQ, ZQ, DQ and MQ (MMQ, or multiple MQ) CPMG-type experiments:</p>
 
     <ul>
-      <li id="MMQ CR72">
+      <li id="MMQ_CR72">
         <b>'<a href="http://wiki.nmr-relax.com/MMQ_CR72">MMQ CR72</a>'</b>:
         The Carver and Richards (1972) 2-site model for most time scales expanded for MMQ CPMG data by Korzhnev et al., 2004.
         It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, &#916;&#969;<sup>H</sup>, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/MMQ_CR72">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/MMQ_CR72_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.mmq_cr72-module.html">API documentation</a>).
       </li>
     </ul>
 
@@ -144,20 +201,32 @@
     <p>The following numeric models are designed for MMQ CPMG-type experiments:</p>
 
     <ul>
-      <li id="NS MMQ 2-site">
+      <li id="NS_MMQ_2-site">
         <b>'<a href="http://wiki.nmr-relax.com/NS_MMQ_2-site">NS MMQ 2-site</a>'</b>:
         The model for 2-site exchange whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup></em> is assumed.
         It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;, &#916;&#969;<sup>H</sup>, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/NS_MMQ_2-site">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/NS_MMQ_2_site_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.ns_mmq_2site-module.html">API documentation</a>).
       </li>
-      <li id="NS MMQ 3-site linear">
+      <li id="NS_MMQ_3-site_linear">
         <b>'<a href="http://wiki.nmr-relax.com/NS_MMQ_3-site_linear">NS MMQ 3-site linear</a>'</b>:
         The model for 3-site exchange linearised with <em>k<sub>AC</sub> = k<sub>CA</sub> = 0</em> whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup> = R<sub>2C</sub><sup>0</sup></em> is assumed.
         It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;<sub>AB</sub>, &#916;&#969;<sub>BC</sub>, &#916;&#969;<sub>AB</sub><sup>H</sup>, &#916;&#969;<sub>BC</sub><sup>H</sup>, k<sub>ex</sub><sup>AB</sup>, k<sub>ex</sub><sup>BC</sup>, k<sub>ex</sub><sup>AC</sup>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/NS_MMQ_3-site_linear">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/NS_MMQ_3_site_linear_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.ns_mmq_3site-module.html">API documentation</a>).
       </li>
-      <li id="NS MMQ 3-site">
+      <li id="NS_MMQ_3-site">
         <b>'<a href="http://wiki.nmr-relax.com/NS_MMQ_3-site">NS MMQ 3-site</a>'</b>:
         The model for 3-site exchange whereby the simplification <em>R<sub>2A</sub><sup>0</sup> = R<sub>2B</sub><sup>0</sup> = R<sub>2C</sub><sup>0</sup></em> is assumed.
         It has the parameters <em>{R<sub>2</sub><sup>0</sup>, ..., p<sub>A</sub>, &#916;&#969;<sub>AB</sub>, &#916;&#969;<sub>BC</sub>, &#916;&#969;<sub>AB</sub><sup>H</sup>, &#916;&#969;<sub>BC</sub><sup>H</sup>, k<sub>ex</sub><sup>AB</sup>, k<sub>ex</sub><sup>BC</sup>, k<sub>ex</sub><sup>AC</sup>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/NS_MMQ_3-site">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/NS_MMQ_3_site_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.ns_mmq_3site-module.html">API documentation</a>).
       </li>
     </ul>
 
@@ -168,26 +237,50 @@
       <li id="M61">
         <b>'<a href="http://wiki.nmr-relax.com/M61">M61</a>'</b>:
         The Meiboom 1961 2-site fast exchange equation for on-resonance data with parameters <em>{R<sub>1&#961;</sub>', ..., &#934;<sub>ex</sub>, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/M61">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/M61_2_site_fast_exchange_R1_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.m61-module.html">API documentation</a>).
       </li>
-      <li id="M61 skew">
+      <li id="M61_skew">
         <b>'<a href="http://wiki.nmr-relax.com/M61_skew">M61 skew</a>'</b>:
         The Meiboom 1961 2-site equation for all time scales with <em>p<sub>A</sub> &#187; p<sub>B</sub></em> and with parameters <em>{R<sub>1&#961;</sub>', ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/M61_skew">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/M61_skew_2_site_fast_exchange_R1_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.m61b-module.html">API documentation</a>).
       </li>
       <li id="DPL94">
         <b>'<a href="http://wiki.nmr-relax.com/DPL94">DPL94</a>'</b>:
         The Davis et al., 1994 extension of the M61 model for off-resonance data with parameters <em>{R<sub>1&#961;</sub>', ..., &#934;<sub>ex</sub>, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/DPL94">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/DPL94_2_site_fast_exchange_R1_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.dpl94-module.html">API documentation</a>).
       </li>
       <li id="TP02">
         <b>'<a href="http://wiki.nmr-relax.com/TP02">TP02</a>'</b>:
         The Trott and Palmer 2002 2-site equation for all time scales with <em>p<sub>A</sub> &#187; p<sub>B</sub></em> and with parameters <em>{R<sub>1&#961;</sub>', ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/TP02">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/TP02_2_site_exchange_R1_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.tp02-module.html">API documentation</a>).
       </li>
       <li id="TAP03">
         <b>'<a href="http://wiki.nmr-relax.com/TAP03">TAP03</a>'</b>:
         The Trott et al., 2003 off-resonance 2-site analytic equation for all time scales with the weak condition <em>p<sub>A</sub> &#187; p<sub>B</sub></em> and with parameters <em>{R<sub>1&#961;</sub>', ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/TAP03">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/TAP03_2_site_exchange_R1_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.tap03-module.html">API documentation</a>).
       </li>
       <li id="MP05">
         <b>'<a href="http://wiki.nmr-relax.com/MP05">MP05</a>'</b>:
         The Miloushev and Palmer 2005 off-resonance 2-site equation for all time scales with parameters <em>{R<sub>1&#961;</sub>', ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/MP05">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/MP05_2_site_exchange_R1_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.mp05-module.html">API documentation</a>).
       </li>
     </ul>
 
@@ -195,20 +288,32 @@
     <p>The following numeric models are designed for R<sub>1&#961;</sub>-type experiments:</p>
 
     <ul>
-      <li id="NS R1rho 2-site">
+      <li id="NS_R1rho_2-site">
         <b>'<a href="http://wiki.nmr-relax.com/NS_R1rho_2-site">NS R1rho 2-site</a>'</b>:
         The model for 2-site exchange using 3D magnetisation vectors.
         It has the parameters <em>{R<sub>1&#961;</sub>', ..., p<sub>A</sub>, &#916;&#969;, k<sub>ex</sub>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/NS_R1rho_2-site">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/NS_2_site_R1_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.ns_r1rho_2site-module.html">API documentation</a>).
       </li>
-      <li id="NS R1rho 3-site linea">
+      <li id="NS_R1rho_3-site_linear">
         <b>'<a href="http://wiki.nmr-relax.com/NS_R1rho_3-site_linear">NS R1rho 3-site linear</a>'</b>:
         The model for 3-site exchange linearised with <em>k<sub>AC</sub> = k<sub>CA</sub> = 0</em> whereby the simplification <em>R<sub>1&#961;A</sub>' = R<sub>1&#961;B</sub>' = R<sub>1&#961;C</sub>'</em> is assumed.
         It has the parameters <em>{R<sub>1&#961;</sub>', ..., p<sub>A</sub>, p<sub>B</sub>, &#916;&#969;<sub>AB</sub>, &#916;&#969;<sub>BC</sub>, k<sub>ex</sub><sup>AB</sup>, k<sub>ex</sub><sup>BC</sup>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/NS_R1rho_3-site_linear">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/NS_3_site_linear_R1_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.ns_r1rho_3site-module.html">API documentation</a>).
       </li>
-      <li id="NS R1rho 3-site">
+      <li id="NS_R1rho_3-site">
         <b>'<a href="http://wiki.nmr-relax.com/NS_R1rho_3-site">NS R1rho 3-site</a>'</b>:
         The model for 3-site exchange whereby the simplification <em>R<sub>1&#961;A</sub>' = R<sub>1&#961;B</sub>' = R<sub>1&#961;C</sub>'</em> is assumed.
         It has the parameters <em>{R<sub>1&#961;</sub>', ..., p<sub>A</sub>, p<sub>B</sub>, &#916;&#969;<sub>AB</sub>, &#916;&#969;<sub>BC</sub>, k<sub>ex</sub><sup>AB</sup>, k<sub>ex</sub><sup>BC</sup>, k<sub>ex</sub><sup>AC</sup>}</em>.
+        (See the
+        <a href="http://wiki.nmr-relax.com/NS_R1rho_3-site">wiki</a>, 
+        <a href="http://www.nmr-relax.com/manual/NS_3_site_R1_model.html">manual</a>,
+        <a href="http://www.nmr-relax.com/api/3.1/lib.dispersion.ns_r1rho_3site-module.html">API documentation</a>).
       </li>
     </ul>
 
