Removed links for many old relax releases.
This is for the webpage http://www.nmr-relax.com/download.html and the links for the old releases
now all point to http://www.nmr-relax.com/download_request.html.

--- a/download.html
+++ b/download.html
@@ -413,77 +413,77 @@
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2434">Version 3.1.5</a> (2014-02-04)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.GNU-Linux.i686.tar.bz2" title="relax">relax-3.1.5.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.5.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>0280976e4685a6b603adb1b746195099</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>70841293</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.GNU-Linux.x86_64.tar.bz2" title="relax">relax-3.1.5.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.5.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>db958787dad2392a6db98dcda1468202</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>70769842</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.Win32.zip" title="relax">relax-3.1.5.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.5.Win32.zip</a></td>
       <td><tt><small>a9e9b67f5f63481966f24e64280d75a6</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>75373213</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.Darwin.dmg" title="relax">relax-3.1.5.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.5.Darwin.dmg</a></td>
       <td><tt><small>a726e1c70b7929051dea4f31432cc22a</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>232293008</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.src.tar.bz2" title="relax">relax-3.1.5.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.5.src.tar.bz2</a></td>
       <td><tt><small>33bcce42d4152eab36930e35769fbc78</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>70768909</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.src.zip" title="relax">relax-3.1.5.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.5.src.zip</a></td>
       <td><tt><small>96ff97d4e9d5e1398dc48f8d9161b1a4</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.5.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>75478884</td>
     </tr>
 
     <tr><td><em><a href="http://gna.org/forum/forum.php?forum_id=2433">Version 3.1.4</a> (2014-01-31)</em></td></tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.GNU-Linux.i686.tar.bz2" title="relax">relax-3.1.4.GNU-Linux.i686.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.4.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>50d4aedbc857e5163be3e53b624644c3</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>70836663</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.GNU-Linux.x86_64.tar.bz2" title="relax">relax-3.1.4.GNU-Linux.x86_64.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.4.GNU-Linux.x86_64.tar.bz2</a></td>
       <td><tt><small>26cc80e86c4522db6c394247b31b8247</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>70775209</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.Win32.zip" title="relax">relax-3.1.4.Win32.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.4.Win32.zip</a></td>
       <td><tt><small>3f463f1623580bc3813c475525441de4</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>75371995</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.Darwin.dmg" title="relax">relax-3.1.4.Darwin.dmg</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.4.Darwin.dmg</a></td>
       <td><tt><small>395fdfd8e25f847a08f8afa1f214e119</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.Darwin.dmg.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>232334077</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.src.tar.bz2" title="relax">relax-3.1.4.src.tar.bz2</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.4.src.tar.bz2</a></td>
       <td><tt><small>926ef2be6831954207cf08d6fa29e722</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>70770485</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.src.zip" title="relax">relax-3.1.4.src.zip</a></td>
+      <td><a href="download_request.html" title="relax">relax-3.1.4.src.zip</a></td>
       <td><tt><small>9ef018a6c7133329e2dc2311a589bcac</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.1.4.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td><a href="download_request.html" title="relax GPG signature">signature</a></td>
       <td>75477346</td>
     </tr>
 
