Added a sentence to the wxPython section explaining why Python 2 is necessary.
This is for the download page http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -72,7 +72,7 @@
 
       <h4>wxPython</h4>
 
-      <p>The relax graphical user interface (GUI) is implemented using <a href="http://www.wxpython.org/">wxPython</a>.  This package is essential if the GUI is to be used.</p>
+      <p>The relax graphical user interface (GUI) is implemented using <a href="http://www.wxpython.org/">wxPython</a>.  This package is essential if the GUI is to be used.  As wxPython currently does not support Python 3, you will need to use Python 2 to access the GUI.</p>
 
       <h4>SciPy</h4>
 
