Added the Morin et al., 2014 relaxation dispersion analysis in relax citation to the website.
The paper is referenced on the pages http://www.nmr-relax.com/features.html and
http://www.nmr-relax.com/analyses/relaxation_dispersion.html, and the citation itself on the page
http://www.nmr-relax.com/refs.html.

--- a/refs.html
+++ b/refs.html
@@ -105,6 +105,13 @@
     </ul>
   </div>
 
+  <div class="main_h2" id="relax_disp">
+   <h2>The relaxation dispersion analyses</h2>
+    <ul class="ref_ul">
+     <li class="ref_li" id="Morin14">Morin, S., Linnet, T. E., Lescanne, M., Schanda, P., Thompson, G. S., Tollinger, M., Teilum, K., Gagn&eacute;, S., Marion, D., Griesinger, C., Blackledge, M., and d'Auvergne, E. J. (2014). relax: the analysis of biomolecular kinetics and thermodynamics using NMR relaxation dispersion data. <em>Bioinformatics</em>.  (<a href="http://dx.doi.org/10.1093/bioinformatics/btu166">abstract</a>)</li>
+    </ul>
+  </div>
+
   <div class="main_h2" id="misc">
    <h2>Misc.</h2>
     <ul class="ref_ul">
