--- a/features.html
+++ b/features.html
@@ -69,7 +69,7 @@
      <li>The frame order theory.</li>
      <li>Conformational analysis of paramagnetically tagged sugars via the N-state model (<a href="refs.html#Erdelyi11">Erdelyi11</a>).</li>
      <li>Analysis and comparison of ensembles of structures using RDCs, PCSs, NOEs, etc. (the N-state model of dynamics).</li>
-     <li>The analysis of <a href="http://www.nmr-relax.com/analyses/relaxation_dispersion.html">relaxation dispersion</a> data.</li>
+     <li>The analysis of <a href="http://www.nmr-relax.com/analyses/relaxation_dispersion.html">relaxation dispersion</a> data. (<a href="refs.html#Morin14">Morin et al., 2014</a>)</li>
     </ul>
 
   </div>
